--- a/tigahelp/templates/tigahelp/about_us_tr.html
+++ b/tigahelp/templates/tigahelp/about_us_tr.html
@@ -7,11 +7,10 @@ About Us
 
 {% block content %}
 
-<h2>Coordinating Entities</h2> <p>Mosquito Alert is led by the following public research institutions: the <em>Spanish
-    National Research Council’s Center for Advanced Studies of Blanes</em> (<strong>CEAB-CSIC</strong>), the <em>Center
-    for Ecological Research and Forestry Applications</em> (<strong>CREAF</strong>) and <em>Pompeu Fabra University</em>
-    (<strong>UPF</strong>). The <em>Catalan Institution for Research and Advanced Studies</em> (<strong>ICREA</strong>)
-    also participates.</p>
+<h2>Koordinatör Varlıklar:</h2>
+<p>Mosquito Alert şu kamu araştırma kurumları tarafından yönetilmektedir: İspanya Ulusal Araştırma Konseyi'nin Blanes
+    İleri Araştırmalar Merkezi (<strong>CEAB-CSIC</strong>), Ekolojik Araştırma ve Ormancılık Uygulamaları Merkezi (<strong>CREAF</strong>) ve Pompeu
+    Fabra Üniversitesi (<strong>UPF</strong>). Catalan Institute for Research and Advanced Studies (<strong>ICREA</strong>) da katılım göstermektedir.</p>
 <p class="centeredImage">
     <img style="max-width: 100%; height: auto;" src="{% static "tigahelp/colaboradors_about_us.jpg" %}">
 </p>
