--- a/tigahelp/templates/tigahelp/license_tr.html
+++ b/tigahelp/templates/tigahelp/license_tr.html
@@ -2,38 +2,69 @@
 {% load staticfiles %}
 
 {% block page_title %}
-Mosquito Alert License
+Mosquito Alert Lisans
 {% endblock %}
 
 
 {% block content %}
 <div class="center">
-    <h2>License</h2>
+    <h2>Lisans</h2>
 </div>
 
-<p> Mosquito Alert is a citizen science system that allows collaboration among various actors in the study, monitoring
-    and control of mosquitoes that are vectors of diseases such as dengue, Zika, chikungunya or West Nile fever. The
-    Mosquito Alert app (formerly Tigatrapp) is an application for mobile phones and tablets that allows anyone to
-    participate in Mosquito Alert. </p> <p> The Mosquito Alert app has been developed by the following institutions: the
-    Spanish National Research Council’s Blanes Center for Advanced Studies (CEAB-CSIC), the Center for Ecological
-    Research and Forest Applications (CREAF), Pompeu Fabra University (UPF) and the Catalan Institute for Research and
-    Advanced Studies (ICREA). </p> <p> The source code for the Mosquito Alert app is available on the project website at
-    <a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>. </p> <p> Authors (in alphabetical order):
-    Frederic Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agustí Escobar, Joan Garriga, Misericòrdia
-    Gironés, Zivko Juznic-Zonta, Aitana Oltra, John R.B. Palmer, Ariadna Peña, Alex Richter-Boix, Isis Sanpera, Alex
-    Tarragó, Marina Torres. </p> <p> In collaboration with the AIM COST community (<a href="https://www.aedescost.eu/">https://www.aedescost.eu/</a>)
-    and Global Mosquito Alert (<a href="https://globalmosquitoalert.com/">https://globalmosquitoalert.com/</a>). </p>
-<p> Mosquito images in the app's Mosquito guide by Roger Eritja, all rights reserved. </p> <p> Illustrations of
-    mosquitoes in the Mosquito guide and Tutorial of the app by JL Ordoñez, CC BY 2.0, </p> <p> Drain Icon, modified by
-    Alex Richter, from Free Icons Library's Drain Icon # 338924 (<a
-            href="https://icon-library.net/icon/drain-icon-3.htm">https://icon-library.net/icon/drain-icon-3.htm</a>).
-    Public domain. </p> <p> Mosquito Bite, modified by Alex Richter-Boix from Mosquito Bite by Sveta_Aho, Adobe Stock
-    Standard License </p> <p> Life cycle, Mobile phone silhouette, Background tracking drawing, by Alex Richter-Boix, CC
-    BY 2.0. </p> <p> Mosquito Alert is free software: it can be redistributed and/or modified under the terms of the GNU
-    General Public License published by the Free Software Foundation (license version 3 or higher). </p> <p> This
-    program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
-    warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
-    details. You should have received a copy of the GNU General Public License along with this program. If not, see
-    <a href="http://www.gnu.org/licenses">http://www.gnu.org/licenses</a>. </p>
+<p>
+    Mosquito Alert, dang humması, Zika, Chikungunya veya Batı Nil ateşi gibi hastalıkların taşıyıcıları olan
+    sivrisineklerin çalışmadaki çeşitli katılımcılar arasında işbirliğine, izlenmesine ve kontrolüne izin veren bir
+    vatandaş bilimi sistemidir. Mosquito Alert uygulaması (eski adıyla Tigatrapp), herkesin Mosquito Alert uygulamasına
+    katılmasına izin veren cep telefonları ve tabletler için bir uygulamadır.
+</p>
+
+<p>
+    Mosquito Alert uygulaması aşağıdaki kurumlar tarafından geliştirilmiştir: İspanya Ulusal Araştırma Konseyi'nin
+    Blanes İleri Araştırmalar Merkezi (CEAB-CSIC), Ekolojik Araştırma ve Orman Uygulamaları Merkezi (CREAF), Pompeu
+    Fabra Üniversitesi (UPF) ve Katalan Enstitüsü Araştırma ve İleri Araştırmalar için (ICREA).
+</p>
+
+<p>
+    Mosquito Alert uygulamasının kaynak kodu, <a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>
+    adresindeki proje web sitesinde mevcuttur.
+</p>
+
+<p>
+    Yazarlar (alfabetik sırayla): Frederic Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agusti Escobar,
+    Joan Garriga, Misericordia Girones, Zivko Juznic-Zonta, Aitana Oltra, John RB Palmer, Ariadna Pena, Alex
+    Richter-Boix, Isis Sanpera Alex Tarrago, Marina Torres.
+</p>
+
+<p>
+    AIM COST topluluğu (<a href="https://www.aedescost.eu/">https://www.aedescost.eu/</a>) ve Global Mosquito Alert (<a
+        href="https://globalmosquitoalert.com/">https://globalmosquitoalert.com/</a>) ile işbirliği içinde.
+</p>
+
+<p> Roger Eritja tarafından yazılan uygulamanın Sivrisinek kılavuzundaki sivrisinek resimleri, tüm hakları
+    saklıdır. </p>
+
+<p> Sivrisinek kılavuzundaki sivrisinek resimleri ve JL Ordonez, CC BY 2.0 tarafından uygulamanın Eğitimi </p>
+
+<p>
+    Drain Icon, Alex Richter tarafından Free Icons Library's Drain Icon # 338924'ten değiştirilmiştir (<a
+        href="https://icon-library.net/icon/drain-icon-3.htm">https://icon-library.net/icon/drain-icon-3.htm</a>)
+</p>
+
+<p> Mosquito Bite, Alex Richter-Boix tarafından modifiye edilmiş, Mosquito Bite by Sveta_Aho, Adobe Stock Standard
+    License </p>
+
+<p> Life döngüsü, Cep telefonu silueti, Arkaplan izleme çizimi, Alex Richter-Boix, CC BY 2.0. </p>
+
+<p>
+    Mosquito Alert ücretsiz bir yazılımdır: Özgür Yazılım Vakfı tarafından yayınlanan GNU Genel Kamu Lisansı (lisans
+    sürümü 3 veya üzeri) hükümleri altında yeniden dağıtılabilir ve / veya değiştirilebilir.
+</p>
+
+<p>
+    Bu program yararlı olacağı ümidiyle, ancak HERHANGİ BİR GARANTİ OLMAKSIZIN; BELİRLİ BİR AMACA UYGUNLUK veya zımni
+    garanti olmadan. Daha fazla ayrıntı için GNU Genel Kamu Lisansına bakın. Bu programla birlikte GNU Genel Kamu
+    Lisansının bir kopyasını almış olmalısınız. Değilse, <a href="http://www.gnu.org/licenses">http://www.gnu.org/licenses</a>
+    adresine bakın.
+</p>
 
 {% endblock %}
