--- a/tigahelp/templates/tigahelp/privacy_tr.html
+++ b/tigahelp/templates/tigahelp/privacy_tr.html
@@ -2,76 +2,87 @@
 {% load staticfiles %}
 
 {% block page_title %}
-Privacy Policy
+Gizlilik Politikası
 {% endblock %}
 
 
 {% block content %}
 
 <div class="center">
-    <h2>Privacy Policy</h2>
+    <h2>Gizlilik Politikası</h2>
 </div>
 
-<p>Mosquito Alert (in any of the names that it may have had in the past or may acquire in the future) collects, among
-    other things, data and images shared by volunteers and makes them available to third parties and the general public.
-    In order to protect the privacy of its volunteers, Mosquito Alert aims to avoid collecting personal information,
-    meaning information that can be used to individually identify a specific natural person. Thus, Mosquito Alert
-    requests that volunteers not transmit names, addresses, passwords and any other personal information when sending
-    reports. The exact locations of observations are collected during report submission, and these may coincide with the
-    exact location of volunteers, but this information is linked only to the report and to a randomly generated user ID.
-    Photograph metadata is not requested, and if photographs sent to the project through the app contain metadata, this
-    metadata will be deleted once the image reaches the project server, with the exception of the photograph
-    geolocation, which will be kept associated with the photograph and may be published.</p> <p>Mosquito Alert also
-    collects the approximate location of the volunteers at random intervals in time (in order to assess the geographic
-    areas covered or explored by the volunteers), but this information is also only linked to a randomly generated user
-    identifier. Volunteers may include notes and photographs in their reports, but it is their responsibility not to
-    include in these notes and photographs any information they wish to keep private or any information that violates
-    the privacy rights of others or is inconsistent with the Mosquito Alert user agreement.</p> <p>Mosquito Alert has
-    mechanisms to prevent, as far as possible, personal data that users may have sent by mistake, despite anonymization
-    measures, from being shared with the general public. Likewise, Mosquito Alert applies measures to detect if personal
-    data has been shared and to eliminate it from the database, as far as possible. Despite this, if in any particular
-    case these measures do not prevent the publication of a personal data, those who detect it are encouraged to notify
-    those responsible for Mosquito Alert, in order to proceed to eliminate its appearance in public space if possible.
-    Mosquito Alert cannot guarantee the elimination of personal data that could be collected by Mosquito Alert by
-    mistake despite the anonymization measures, nor can it guarantee that such data will be not visible to members of
-    Mosquito Alert or to any of its collaborators or third parties.</p> <p>It is noted that if participants share their
-    observations (reports) in any public medium, such as on social networks, they may be associating these observations
-    with their personal data (e.g. personal account on social networks), thus giving up, voluntarily, the anonymity that
-    the project seeks to provide.</p> <p>Mosquito Alert allows participants to keep their data while maintaining
-    anonymity, through an authentication system using external accounts (email, Facebook, Twitter), through Firebase.
-    This allows participants to sync multiple devices and recover data if they have to uninstall the app. This option is
-    voluntary and is not activated by default. In any case, the information collected by Firebase for this purpose is
-    not stored on the Mosquito Alert servers, is not linked to the scientific data collected by Mosquito Alert, and is
-    not processed by Mosquito Alert.</p> <p>A detailed list of the information that Mosquito Alert collects is as
-    follows:</p>
+<p>
+    Mosquito Alert (geçmişte almış olabileceği veya gelecekte edinebileceği isimlerden herhangi birinde), diğer şeylerin
+    yanı sıra, gönüllüler tarafından paylaşılan verileri ve görüntüleri toplar ve bunları üçüncü şahısların ve genel
+    halkın kullanımına sunar. Mosqutio Alert, gönüllülerinin mahremiyetini korumak için kişisel bilgileri, yani belirli
+    bir gerçek kişiyi bireysel olarak tanımlamak için kullanılabilecek bilgileri toplamaktan kaçınmayı amaçlamaktadır.
+    Bu nedenle Mosquito Alert, gönüllülerin rapor gönderirken isim, adres, şifre ve diğer kişisel bilgileri iletmemesini
+    talep eder. Gözlemlerin tam konumları, raporun sunulması sırasında toplanır ve bunlar, gönüllülerin tam konumuyla
+    çakışabilir, ancak bu bilgi yalnızca raporla ve rastgele oluşturulmuş bir kullanıcı kimliğiyle bağlantılıdır.
+    Fotoğraf üst verisi talep edilmez ve uygulama aracılığıyla projeye gönderilen fotoğraflar üst veri içeriyorsa, bu
+    meta veriler, fotoğrafla ilişkili tutulacak olan fotoğraf coğrafi konumu hariç olmak üzere, görüntü proje sunucusuna
+    ulaştığında silinecektir.
+</p>
+<p>
+    Mosquito Alert aynı zamanda zaman içinde rastgele aralıklarla gönüllülerin yaklaşık konumlarını da toplar
+    (gönüllüler tarafından kapsanan veya keşfedilen coğrafi alanları değerlendirmek için), ancak bu bilgi aynı zamanda
+    yalnızca rastgele oluşturulmuş bir kullanıcı tanımlayıcısıyla bağlantılıdır. Gönüllüler raporlarına notlar ve
+    fotoğraflar ekleyebilir, ancak bu notlara ve fotoğraflara gizli tutmak istedikleri herhangi bir bilgiyi veya
+    başkalarının gizlilik haklarını ihlal eden veya Mosquito Alert kullanıcı sözleşmesine aykırı olan herhangi bir
+    bilgiyi eklememek onların sorumluluğundadır. Mosquito Alert, anonimleştirme önlemlerine rağmen kullanıcıların
+    yanlışlıkla göndermiş olabilecekleri kişisel verilerin genel halkla paylaşılmasını mümkün olduğunca engelleyen
+    mekanizmalara sahiptir. Aynı şekilde, Mosquito Alert, kişisel verilerin paylaşılıp paylaşılmadığını tespit etmek ve
+    mümkün olduğunca veri tabanından çıkarmak için önlemler uygular. Buna rağmen, herhangi bir özel durumda bu tedbirler
+    bir kişisel verinin yayınlanmasını engellemiyorsa, bunu tespit edenlerin, mümkünse kamusal alandaki görünümünü
+    ortadan kaldırmaya devam etmek için Mosquito Alert uygulamasından sorumlu olanları bilgilendirmesi teşvik edilir.
+    Mosquito Alert, anonimleştirme önlemlerine rağmen Mosquito Alert tarafından yanlışlıkla toplanabilecek kişisel
+    verilerin ortadan kaldırılmasını garanti edemez ve bu tür verilerin Mosquito Alert üyelerine veya ortaklarından
+    herhangi biri veya üçüncü şahıslar tarafından görülemeyeceğini garanti edemez.
+</p>
+<p>
+    Katılımcılar gözlemlerini (raporlarını) sosyal ağlar gibi herhangi bir kamuya açık ortamda paylaşırlarsa, bu
+    gözlemlerini kişisel verileriyle (örneğin sosyal ağlardaki kişisel hesaplar) ilişkilendirerek anonimlikten gönüllü
+    olarak vazgeçebilecekleri belirtilmektedir.
+</p>
+<p>
+    Mosquito Alert, katılımcıların Firebase aracılığıyla diğer hesapları (e-posta, Facebook, Twitter) kullanan bir
+    kimlik doğrulama sistemi aracılığıyla anonim kalırken, verilerini tutmalarına olanak tanır. Bu, katılımcıların
+    uygulamayı kaldırmaları gerekiyorsa birden fazla cihazı senkronize etmelerine ve verileri kurtarmalarına olanak
+    tanır. Bu seçenek isteğe bağlıdır ve varsayılan olarak etkinleştirilmemiştir. Her durumda, Firebase tarafından bu
+    amaçla toplanan bilgiler Mosquito Alert sunucularında saklanmaz, Mosquito Alert tarafından toplanan bilimsel
+    verilere bağlanmaz ve Mosquito Alert tarafından işlenmez.
+</p>
+<p>
+    Mosquito Alert uygulamasının topladığı bilgilerin ayrıntılı bir listesi aşağıdaki gibidir:
+</p>
 <ul>
-    <li>Reports collected and sent by volunteers in relation to breeding sites, bites and sightings of possible
-        mosquitoes (Mosquito Alert currently focuses on 5 different species of mosquitoes), as well as volunteers
-        responses to questions sent to them through the app. This includes the precise location of the volunteer
-        observations and photographs (as well as photograph metadata location, if any), notes, or any other information
-        that the volunteer adds to the report.
+    <li>Olası sivrisineklerin üreme alanları, sokmaları ve görülmesi ile ilgili olarak gönüllüler tarafından toplanan ve
+        gönderilen raporlar (Mosquito Alert şu anda 5 farklı sivrisinek türüne odaklanmaktadır) ve uygulama aracılığıyla
+        kendilerine gönderilen sorulara gönüllülerin yanıtları. Bu, gönüllü gözlemlerinin ve fotoğraflarının (varsa
+        fotoğraf üst veri konumunun yanı sıra), notların veya gönüllünün rapora eklediği diğer bilgilerin tam konumunu
+        içerir.
     </li>
-    <li>Information on the approximate location of the volunteers, sampled in background mode and at random time
-        intervals. This information is collected for scientific purposes, to know the geographical areas explored by the
-        volunteers (sampling effort, that is, in which areas there is or is not participation and to what extent, to be
-        able to relate it to the number of observations in that same area by example with modeling techniques or
-        statistics), and to improve knowledge about mosquito dispersal pathways related to human mobility (that is, to
-        better understand the relationship between how people move on a large scale and the dispersal of these species
-        in the territory). This information is of great scientific interest. To avoid collection of the exact locations
-        of volunteers, these locations are placed on a grid of 0.025 degrees latitude and longitude and only the
-        identifier of the grid squares they fall into is transmitted to the server. Thus, it is impossible to determine
-        the actual location, within an area of ​​0.025 degrees latitude by 0.025 degrees longitude (between about 3.1
-        and about 7.7 square km, or between 765 and 1901 football fields). In any case, volunteers can deactivate this
-        option, activated by default, in the application settings.
+    <li>Arka plan modunda ve rastgele zaman aralıklarında örneklenen gönüllülerin yaklaşık konumu hakkında bilgi alır.
+        Bu bilgiler, gönüllüler tarafından keşfedilen coğrafi alanları bilmek için (örnekleme çabası, yani hangi
+        alanlarda katılımın olduğu veya olmadığı ve ne ölçüde gözlem sayısıyla ilişkilendirilebilmesi için) bilimsel
+        amaçlarla toplanır. Modelleme teknikleri veya istatistiklerle örnek olarak aynı alan ve insan hareketliliğiyle
+        ilgili sivrisinek yayılma yolları hakkındaki bilgileri geliştirmek (yani, insanların büyük ölçekte nasıl hareket
+        ettiği ve bu türlerin bölgedeki dağılımı arasındaki ilişkiyi daha iyi anlamak için). Bu bilgi büyük bilimsel
+        ilgi çekmektedir. Gönüllülerin kesin konumlarının toplanmasını önlemek için, bu konumlar 0,025 derece enlem ve
+        boylam ızgarasına yerleştirilir ve yalnızca içine düştükleri ızgara karelerinin tanımlayıcısı sunucuya iletilir.
+        Bu nedenle, 0.025 derece enlemli bir alanda 0.025 derece boylamda (yaklaşık 3.1 ile yaklaşık 7.7 km kare
+        arasında) gerçek konumu belirlemek imkansızdır. Her durumda, gönüllüler uygulama ayarlarında varsayılan olarak
+        etkinleştirilen bu seçeneği devre dışı bırakabilir.
     </li>
-    <li>Information about the phone model, battery, language settings, and the app version (that is, the version
-        installed and the operating system and version in which it is installed). This information is used to help the
-        research team improve the application.
+    <li>Telefon modeli, pil, dil ayarları ve uygulama sürümü hakkında bilgiler (yani, yüklü sürüm ve yüklü olduğu
+        işletim sistemi ve sürüm). Bu bilgiler, araştırma ekibinin uygulamayı iyileştirmesine yardımcı olmak için
+        kullanılır.
     </li>
-    <li>If the volunteer chooses to authenticate through an external account using Firebase, then Firebase may collect
-        the email address, password, phone number, IP address and other information associated with that external
-        account.
+    <li>Gönüllü, Firebase kullanarak harici bir hesap üzerinden kimlik doğrulamayı seçerse, Firebase e-posta adresini,
+        şifreyi, telefon numarasını, IP adresini ve bu harici hesapla ilişkili diğer bilgileri toplayabilir.
     </li>
 </ul>
+
 
 {% endblock %}
