--- a/tigahelp/templates/tigahelp/project_about_tr.html
+++ b/tigahelp/templates/tigahelp/project_about_tr.html
@@ -18,16 +18,9 @@ About The Project
         </div>
 
 
-        <h2>What is Mosquito Alert?</h2>
-        <p>Mosquito Alert is a citizen science platform that facilitates collaboration between various actors to study,
-            monitor and control mosquito species that carry diseases like dengue, Zika, chikungunya and West Nile
-            virus.</p>
-        <p>The project gives key roles to citizens, scientists, public health experts and educators. Mosquito Alert lets
-            anyone collect and share data (1) and engage in data validation alongside professional entomologists, who
-            label mosquito reports and respond to participants (2). Once validated, data is made available to the
-            general public through an interactive web map (3). It is also relied on by scientists (4) and by public
-            health agents (5) to study and monitor disease vector mosquitoes.</p>
-
+        <h2>Mosquito Alert nedir?</h2>
+        <p>Mosquito Alert, dang humması, Zika, chikungunya ve Batı Nil ateşi gibi hastalıkları taşıyan sivrisinek türlerini incelemek, izlemek ve kontrol etmek için çeşitli katılımcılar arasında işbirliğini kolaylaştıran bir vatandaş bilimi platformudur.
+            Bu proje, vatandaşlara, bilim adamlarına, halk sağlığı uzmanlarına ve eğitimcilere kilit roller vermektedir. Mosquito Alert, herkesin veri toplayıp paylaşmasına (1) sivrisinek raporlarını etiketleyip katılımcılara geri dönüş yapan profesyonel entomologlarla birlikte veri doğrulamasına izin verir (2). Veriler doğrulandıktan sonra, etkileşimli bir web haritası (3) aracılığıyla genel kamuoyuna sunulur. Hastalık vektörü sivrisinekleri incelemek ve izlemek için bilim adamları (4) ve halk sağlığı çalışanları (5) tarafından güvenilir bir kaynak yaratmaktadır.</p>
         <p class="centeredImage">
 
             <img style="max-width: 100%; height: auto;" src="{% static "tigahelp/what_happens.jpg" %}">
@@ -35,20 +28,11 @@ About The Project
         </p>
 
 
-        <h2>Why is Mosquito Alert needed?</h2>
-        <p>In recent decades the number of invasive mosquitoes and emerging mosquito-borne diseases has increased on a
-            global scale. New invasive species, mainly of the genus Aedes , have settled in new areas and continue to
-            expand. Aedes mosquitoes are important from a health perspective because of their ability to transmit
-            diseases like dengue, Zika and chikungunya. Likewise, the common mosquito (Culex pipiens) is important
-            because it can transmit the West Nile virus. The risk mosquitoes pose to public health makes it important to
-            monitor their populations.</p>
-        <p>Given the complexity of the problem, Mosquito Alert opens up mosquito surveillance and research to the
-            public, allowing collaboration between different actors through its app and its other platforms and
-            communities.</p>
-        <h2>What data is collected?</h2>
-        <p>Data is collected on 5 different mosquito species: the tiger mosquito (<em>Aedes albopictus</em>), the yellow
-            fever mosquito (<em>Aedes aegypti</em>), the Asian bush mosquito (<em>Aedes japonicus</em>), the Korean
-            mosquito (<em>Aedes koreicus</em>), and the common mosquito (<em>Culex pipiens</em>).</p>
+        <h2>Mosquito Alert neden gereklidir?</h2>
+        <p>Son yıllarda, istilacı sivrisineklerin ve yeni ortaya çıkan sivrisinek kaynaklı hastalıkların sayısı küresel ölçekte artmıştır. Başta Aedes cinsi olmak üzere yeni istilacı türler yeni alanlara yerleşmekte ve buralarda yayılmaya devam etmektedir. Aedes sivrisinekler, dang humması, Zika ve chikungunya gibi hastalıkları bulaştırma yeteneklerinden dolayı sağlık açısından önemlidir. Aynı şekilde, ev sivrisineği (Culex pipiens), Batı Nil virüsünü bulaştırabildiği için önemlidir. Sivrisineklerin halk sağlığı için oluşturduğu risk, popülasyonlarının izlenmesini önemli kılar.</p>
+        <p>Sorunun karmaşıklığı göz önüne alındığında, Mosquito Alert, sivrisinek sürveyansı ve ilgili araştırmaları halka açan, çeşitli platformların, toplulukların ve buradaki katılımcıların arasında işbirliğine olanak tanıyan bir uygulamadır.</p>
+        <h2>Uygulama ile hangi veri toplanıyor?</h2>
+        <p>Beş farklı sivrisinek türüne ait veri toplanır: Asya Kaplan Sivrisineği (<em>Aedes albopictus</em>), Sarı humma sivrisineği (<em>Aedes aegypti</em>), Asya çalı sivrisineği (<em>Aedes japonicus</em>), Kore sivrisineği (<em>Aedes koreicus</em>) ve ev sivrisineği (<em>Culex pipiens</em>).</p>
 
 
         <p class="centeredImage">
@@ -58,8 +42,7 @@ About The Project
         </p>
 
 
-        <p>For these species, data is collected on adult mosquitoes and their breeding sites and bites. All of this data
-            is important for better understanding these species, and for monitoring and controlling them.</p>
+        <p>Bu türler kapsamında, yetişkin sivrisinekler, onların üreme alanları ve sokmaları hakkında veri toplar. Tüm bu veriler, bu türleri daha iyi anlayıp onları izlemek ve kontrol etmek için önemlidir.</p>
 
 
         <p class="centeredImage">
@@ -69,14 +52,7 @@ About The Project
         </p>
 
 
-        <p>Mosquito Alert also collects the approximate locations of participants' devices, sampling these locations at
-            5 random times each day unless the participant has opted out of this. Locations are masked on a grid of
-            0.025 x 0.025 degrees latitude and longitude (approximately 2x2 km) before being sent to the Mosquito Alert
-            server. For privacy reasons, only the grid square identifier is actually shared with Mosquito Alert, not the
-            precise location. This information is highly valuable from a scientific perspective, as it enables
-            researchers to make better estimates about mosquito populations, distinguishing, for example, places with
-            few mosquitoes from places with few participants (but potentially many mosquitoes). Participant locations
-            provide information about what is known in ecology as the sampling effort.</p>
+        <p>Mosquito Alert ayrıca katılımcıların cihazlarının yaklaşık konumlarını da toplar ve katılımcı aksini tercih etmemişse bu konumları her gün rastgele 5 kez örnekler. Konumlar, Mosquito Alert sunucusuna gönderilmeden önce 0,025 x 0,025 derece enlem ve boylam (yaklaşık 2x2 km) ızgarada maskelenir. Gizlilik nedenleriyle, tam konum değil yalnızca ızgara kare tanımlayıcısı Mosquito Alert ile paylaşılır. Bu bilgiler, araştırmacıların sivrisinek popülasyonları hakkında daha iyi tahminler yapmalarına olanak tanır, örneğin potansiyel olarak çok sayıda sivrisinek bulunan ancak az sayıda katılım olan yerlerden çok sayıda katılım gelen yerlerin ayırt edilmesine olanak sağladığından, bilimsel açıdan oldukça değerlidir. Katılımcı lokasyonlar, ekolojide örnekleme çabası olarak bilinen şey hakkında bilgi sağlar.</p>
 
 
         <p class="centeredImage">
@@ -86,28 +62,20 @@ About The Project
         </p>
 
 
-        <h2>What is the data used for?</h2>
-        <p>Here are some examples:</p>
+        <h2>Veri ne için kullanılır?</h2>
+        <p>Bazı örnekler:</p>
         <ul>
-            <li type="disc">The reports people send to Mosquito Alert have proven in recent years to be an effective
-                early warning system against the invasion of new mosquitoes. The system is used to monitor established
-                mosquito populations and discover new populations.
+            <li type="disc">İnsanların Mosquito Alert uygulaması'na gönderdiği raporların, yeni sivrisinek istilasına karşı etkili bir erken uyarı sistemi olduğu son yıllarda kanıtlanmıştır. Sistem, yerleşik sivrisinek popülasyonlarını izlemek ve yeni popülasyonları keşfetmek için kullanılır.
             </li>
-            <li type="disc">Observations of mosquitoes, breeding sites and bites help scientists and public health
-                managers to assess the risk and manage disease vector populations. In order to estimate the abundance of
-                mosquitoes in a given site, it is important to adjust observations based on sampling effort. To do this,
-                the Mosquito Alert app collects data on the approximate position of the device at random times of the
-                day. Positions are masked on a grid of approximately 2x2 km to protect privacy.
+            <li type="disc">Sivrisineklerin, üreme alanlarının ve sokmalarının gözlemlenmesi, bilim adamlarının ve halk sağlığı yöneticilerinin riski değerlendirmesine ve hastalık vektörü popülasyonlarını yönetmesine yardımcı olur. Belirli bir alandaki sivrisineklerin bolluğunu tahmin etmek için, örnekleme çabasına dayalı olarak gözlemleri ayarlamak önemlidir. Bunu yapmak için Mosquito Alert uygulaması, günün rastgele saatlerinde cihazın yaklaşık konumu hakkında veri toplar. Mahremiyeti korumak için pozisyonlar yaklaşık 2x2 km'lik bir ızgara üzerinde maskelenmiştir.
             </li>
-            <li type="disc">Work is currently underway to develop a real-time, participatory and dynamic epidemiological
-                risk prediction system.
+            <li type="disc">Gerçek zamanlı, katılımcı ve dinamik bir epidemiyolojik risk tahmin sistemi geliştirme çalışmaları şu anda devam etmektedir.
             </li>
         </ul>
-        <h2>Where can I find more information?</h2>
-        <p>You will find more information on the project website and on social media.</p>
+        <h2>Daha fazla bilgiyi nerede bulabilirim?</h2>
+        <p>Proje web sitesinde ve sosyal medyada daha fazla bilgi bulabilirsiniz.</p>
         <p><a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a></p>
-        <p>In the settings of the app you will find a participant tutorial, a guide to help you identify mosquitos, the
-            privacy policy and terms of use, and information about the entities behind this project.</p>
+        <p>Uygulamanın ayarlarında bir katılımcı eğitimi, sivrisinekleri belirlemenize yardımcı olacak bir kılavuz, gizlilik politikası, kullanım koşulları ve bu projenin arkasındaki tüzel kişiler hakkında bilgiler bulacaksınız.</p>
 
 
     </div>
