--- a/tigahelp/templates/tigahelp/terms_tr.html
+++ b/tigahelp/templates/tigahelp/terms_tr.html
@@ -2,61 +2,37 @@
 {% load staticfiles %}
 
 {% block page_title %}
-User Agreement
+Kullanıcı Sözleşmesi
 {% endblock %}
 
 
 {% block content %}
 
 <div class="center">
-    <h2>User Agreement</h2>
+    <h2>Kullanıcı Sözleşmesi</h2>
 </div>
 
-<p> Mosquito Alert (in any of the names it may have had in the past or may acquire in the future) is a citizen science
-    system run by the Spanish National Research Council's Blanes Center for Advanced Studies (CEAB-CSIC), the Center for
-    Ecological Research and Forestry Applications (CREAF), Pompeu Fabra University (UPF) and the Catalan Institute for
-    Research and Advanced Studies (ICREA). </p> <p> Mosquito Alert depends on the public's collection of data on various
-    disease-vector mosquito species. Citizens participate by sending and sharing, data and images, through the various
-    Mosquito Alert applications for mobile and other electronic devices. Participants must be adults or must participate
-    under the supervision of an adult, in accordance with the legislation of Spain and of their country of residence.
-    Participants must also accept Mosquito Alert’s privacy policy, and agree to the following terms of use: </p>
+<p>
+    Mosquito Alert (geçmişte almış olabileceği veya gelecekte alabileceği isimlerden herhangi birinde), İspanya Ulusal Araştırma Konseyi Blanes İleri Araştırmalar Merkezi (CEAB-CSIC), Ekolojik Araştırma Merkezi ve Ormancılık Uygulamaları (CREAF), Pompeu Fabra Üniversitesi (UPF) ve Katalan Araştırma ve İleri Araştırmalar Enstitüsü (ICREA) tarafından yürütülen bir vatandaş bilimi sistemidir.
+</p>
+<p>
+    Mosquito Alert, halkın çeşitli hastalık vektörü sivrisinek türleri hakkında bilgi toplamasına dayanır. Vatandaşlar, mobil ve diğer elektronik cihazlar için çeşitli Mosquito Alert uygulamaları aracılığıyla veri ve görüntü göndererek ve paylaşarak katılır. Katılımcılar, İspanya ve ikamet ettikleri ülkenin mevzuatına uygun olarak yetişkin olmalı veya uygulamayı bir yetişkinin gözetimi altında kullanmalıdır. Katılımcılar ayrıca Mosquito Alert uygulamasının gizlilik politikasını ve aşağıdaki kullanım şartlarını kabul etmelidir:
+</p>
 <ol>
-    <li> The mosquito species that Mosquito Alert works with can be vectors of diseases such as dengue, chikungunya, and
-        Zika. Mosquito Alert contributes to fighting these diseases, by collecting data and images, analysing this
-        information, and carrying out public awareness, monitoring and mosquito control activities. As these mosquitoes
-        are disease vectors, when participating in Mosquito Alert you must exercise extreme caution and you must not
-        seek out these species (directly or through their breeding places), especially in places where the diseases they
-        transmit are endemic, or during an outbreak of such diseases. Participating in Mosquito Alert can involve
-        reporting the encounters you have with mosquitoes during your normal activities, and changing your activities to
-        reduce your exposure to mosquitoes and their breeding sites. You accept that you should not in any way increase
-        your exposure to mosquitoes by participating in this project.
+    <li>
+        Mosquito Alert uygulamasının araştırdığı sivrisinek türleri dang humması, chikungunya ve Zika gibi hastalıkların vektörleri olabilirler. Mosquito Alert veri ve görüntü toplayarak, bu bilgileri analiz ederek ve halkı bilinçlendirir, sivrisinek sürveyansı ve kontrol faaliyetlerini gerçekleştirerek bu hastalıklarla mücadeleye katkıda bulunur. Bu sivrisinekler hastalık vektörleri olduğundan, özellikle de bulaştırdıkları hastalıkların endemik olduğu yerler veya bu tür hastalıkların salgını sırasında kullanıcılar, Mosquito Alert uygulamasına katılırken (doğrudan veya üreme yerleri aracılığıyla) çok dikkatli olmalıdır, bu türleri bulmaya çalışmamalıdırlar. Mosquito Alert uygulamasına katılmak, normal faaliyetleriniz sırasında sivrisineklerle karşılaştığınız anları bildirmeyi amaçlar ve sivrisinekler ile üreme alanlarına maruz kalma olasılığınızı azaltmak için faaliyetlerinizi değiştirmeyi içerir. Bu projeye katılarak, sivrisineklere maruz kalma frekansınızı hiçbir şekilde arttırmamanız gerektiğini kabul etmiş olursunuz.
     </li>
-    <li> By sharing your data and works (e.g. photographs) with Mosquito Alert, you agree to these terms of use, you
-        accept that the works (e.g. photographs) be disseminated anonymously without stating your name or pseudonym and
-        you grant the institutions that run Mosquito Alert a license for your work of duration equal to the applicable
-        copyright in force to be able to exploit the work without any restriction and assign it to third parties
-        worldwide, royalty-free, non-exclusive and sub-licensable. In any case, these terms do not imply for the
-        original author any restriction on the use of his or her works, being able to exploit it by other means in a
-        manner compatible with the assignment granted by this document.
+    <li>
+        Veriyi ve çalışmanızı (örneğin çekilen fotoğrafları) Mosquito Alert ile paylaşarak, bu kullanım şartlarını, eserlerin (örneğin fotoğraflar) adınızı veya takma adınızı belirtmeden anonim olarak yayınlanmasını ve bu örnekleri işleten kurumlara vermeyi kabul etmiş olursunuz. Mosquito Alert'i çalıştıran kurumlara, çalışmadan herhangi bir kısıtlama olmaksızın yararlanabilmeleri için, yürürlükteki geçerli telif hakkına uygun süre yaptığınız çalışmanın, dünya çapındaki üçüncü şahıslara, telifsiz, münhasır olmayan ve alt lisanslanabilir bir lisans vermiş olursunuz. Her durumda bu şartlar, orijinal yazara eserlerinin kullanımına ilişkin herhangi bir kısıtlama içermez, bu belge ile verilen görev ile uyumlu bir şekilde başka yollarla bundan yararlanılabileceği anlamına gelir.
     </li>
-    <li> As a general rule, any original creation that can be protected by copyright will be disseminated by Mosquito
-        Alert with a CC BY license, indicating anonymous author and the name of the project (example: Anonymous, CC BY
-        Mosquito Alert), even if it contains the author's name in it or in its metadata. When possible, part of the
-        databases or tables resulting from user contributions will be released, as a general rule, under a CC0 license.
-        In the event of the need to give access to sensitive information to third parties (e.g. professionals in charge
-        of mosquitoes monitoring and control, research personnel, public health managers, etc.), appropriate protocols
-        and/or licenses will be established for this dissemination.
+    <li>
+        Genel bir kural olarak, telif hakkı ile korunabilen herhangi bir orijinal eser, Mosquito Alert tarafından, anonim yazar ve projenin adını (örneğin: Anonymous, CC BY Mosquito Alert) belirten bir CC BY lisansı ile, yazarın adını içinde veya meta verilerinde içerse dahi dağıtılabilecektir. Mümkün olduğunda, kullanıcı katkılarından kaynaklanan veri tabanlarının veya tabloların bir kısmı, genel bir kural olarak, bir CCO lisansı altında yayımlanacaktır. Üçüncü şahıslara hassas bilgilere erişim verilmesi ihtiyacı olması durumunda (örneğin sivrisinek izleme ve kontrolünden sorumlu profesyoneller, araştırma personeli, halk sağlığı yöneticileri, vb.), Bu yaygınlaştırma için uygun protokoller ve/veya lisanslar oluşturulacaktır.
     </li>
-    <li> You guarantee that you have the necessary legal rights over the data and works that you share with Mosquito
-        Alert and that these are not defamatory, and do not violate any law. Participation in Mosquito Alert is
-        anonymous to guarantee the protection of the participants’ privacy. Therefore, you guarantee that you will not
-        add personal information of yourself or of third parties in the data or works that you send to Mosquito Alert.
-        You understand that these data or works may be transferred to third parties, and that Mosquito Alert cannot
-        guarantee the ability to eliminate any possible personal data that you send by mistake.
+    <li>
+        Mosquito Alert ile paylaştığınız veriler ve eserler üzerinde gerekli yasal haklara sahip olduğunuzu, bunların karalayıcı olmadığını ve herhangi bir yasayı ihlal etmediğini garanti etmektesiniz. Mosquito Alert uygulamasına katılım, katılımcıların mahremiyetinin korunmasını garanti etmek için anonimdir. Bu nedenle, Mosquito Alert'e gönderdiğiniz veri veya çalışmalara kendinize veya üçüncü şahıslara ait kişisel bilgileri eklemeyeceğinizi garanti etmektesiniz. Bu verilerin veya çalışmaların üçüncü şahıslara aktarılabileceğini ve Mosquito Alert uygulamasının yanlışlıkla gönderdiğiniz olası kişisel verileri ortadan kaldırma yeteneğini garanti edemeyeceğini anlıyorsunuz.
     </li>
-    <li> You agree to indemnify individuals, institutions and/or members of Mosquito Alert and collaborators for any
-        legal and/or monetary burden and any other expense that may be incurred as a result of your breach of the above
-        guarantee.
+    <li>
+        Mosquito Alert uygulamasının bireylerini, kurumlarını ve/veya üyelerini ve ortak çalışanlarını, yukarıdaki garantiyi ihlal etmenizin bir sonucu olarak ortaya çıkabilecek her türlü yasal ve/veya parasal yük ve diğer masraflar için tazmin etmeyi kabul ediyorsunuz.
     </li>
 </ol>
 
