--- a/tigahelp/templates/tigahelp/scoring_tr.html
+++ b/tigahelp/templates/tigahelp/scoring_tr.html
@@ -12,40 +12,33 @@ Mosquito Alert Score Info
 
     <div class='text_container'>
 
-        <h2>SCORE INFO</h2>
-        <p>Actions taken in Mosquito Alert have recognition and rewards in the form of points. The number of points per
-            report varies depending on the information provided and its quality.</p>
-        <p>The maximum points that can be obtained per report are:</p>
+        <h2>PUAN BİLGİSİ</h2>
+        <p>Mosquito Alert'te gerçekleştirilen eylemler, puan şeklinde takdir ve ödüllere sahiptir. Rapor başına puan sayısı, sağlanan bilgilere ve kalitesine bağlı olarak değişir.</p>
+        <p>Rapor başına alınabilecek maksimum puanlar şunlardır:</p>
         <ul>
-            <li>Invasive <em>Aedes</em> Mosquito: 20 points</li>
-            <li>Common mosquito: 14 points</li>
-            <li>Storm drain breeding site: 20 points</li>
-            <li>Other breeding site in a public area: 16 points</li>
+            <li>İstilacı <em>Aedes</em> Sivrisinek: 20 puan</li>
+            <li>Yaygın (yerli) Sivrisinek: 14 puan</li>
+            <li>Mazgallardaki üreme alanı: 20 puan</li>
+            <li>Halka açık alandaki diğer üreme alanları: 16 puan</li>
         </ul>
-        <p>In addition, there are extra bonuses for the first mosquito of the season, the first report of the day or for
-            participating frequently. When you reach a specific number of reports, you not only get extra points, but
-            you get a special trophy. There are different trophies according to the milestones reached.</p>
-        <p>Those reports that are sent as a mosquito but turn out not to be mosquitoes, according to expert validation,
-            will not earn points. A photo that does not allow experts to identify the mosquito or breeding place will
-            not be scored either.</p>
-        <p>The accumulation of points will allow you to go up a <b>level</b>:</p>
+        <p>Ayrıca sezonun ilk sivrisineği, günün ilk raporu veya sık sık katılım için ekstra bonuslar vardır. Belirli sayıda rapora ulaştığınızda, sadece ekstra puan almakla kalmaz, özel bir kupa da alırsınız. Ulaşılan kilometre taşlarına göre farklı kupalar vardır.</p>
+        <p>Uzman doğrulamasına göre sivrisinek olarak gönderilen ancak sivrisinek olmadığı ortaya çıkan raporlardan puan kazanılmayacaktır. Uzmanların sivrisineği veya üreme yerini belirlemesine imkan vermeyen kalitedeki fotoğraflar da puanlanmayacaktır.</p>
+        <p>Puan birikimi, uygulamada seviye atlamanızı sağlayacaktır:</p>
         <ul>
-            <li>(1) Novice (beginner)</li>
-            <li>(2) Contributor (contributor)</li>
-            <li>(3) Expert (expert)</li>
-            <li>(4) Master (master)</li>
-            <li>(5) Grandmaster (grandmaster)</li>
+            <li>(1) Acemi (başlangıç)</li>
+            <li>(2) Katılımcı (katkıda bulunan)</li>
+            <li>(3) Uzman (uzman)</li>
+            <li>(4) Usta (usta)</li>
+            <li>(5) Büyük Usta (büyük usta)</li>
         </ul>
-        <p>These icons indicate the level reached:</p>
+        <p>Bu simgeler, ulaşılan seviyeyi gösterir:</p>
 
         <img src="{% static "tigahelp/InfoScoring_half.png" %}" width="100%">
 
-        <h2>Points panel</h2>
-        <p>The global ranking is accessed by clicking on the score on the main screen. Pressing on a ranking position
-            displays the breakdown of points obtained by the user.</p>
-        <p>Clicking on "More details" accesses the broken down points panel.</p>
-        <p>In this section there is a list of the reports sent with the score obtained in each one of them. The reports
-            are interactive, by clicking you get the broken down score and why the score.</p>
+        <h2>Puan paneli</h2>
+        <p>Küresel sıralamaya, ana ekrandaki puana tıklayarak erişilir. Bir sıralama pozisyonuna basmak, kullanıcı tarafından elde edilen puanların dökümünü görüntüler.</p>
+        <p>"Daha fazla ayrıntı" kısmına tıklandığında, puan döklümü paneline erişilir.</p>
+        <p>Bu bölümde, gönderilen her bir raporun kazanılan puan ile bir listesi bulunmaktadır. Raporlar etkileşimlidir, tıkladığınızda puan dökümünü ve nerden puan kazanıldığını görebilirsiniz.</p>
 
     </div>
 </div>
